# klavaro

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
data/: C.paragraphs  C.words  Makefile.am  Makefile.in  alphagrip5_us.kbd  ar.paragraphs  ar.words  azerty_be.kbd  azerty_fr.kbd  azerty_fr_ibook.kbd  basic_lessons.txt  bg.paragraphs  bg.words  bn.paragraphs  bn.words  ca.paragraphs  ca.words  colemak_us.kbd  cs.paragraphs  cs.words  da.paragraphs  da.words  de.paragraphs  de.words  dubeolsik_kr.kbd  dvorak_bg.kbd  dvorak_br_nativo.kbd  dvorak_br_us.kbd  dvorak_ca_fr.kbd  dvorak_de_neo2.kbd  dvorak_eo_eurokeys.kbd  dvorak_eo_nativo.kbd  dvorak_eo_uk.kbd  dvorak_es_nativo.kbd  dvorak_es_us.kbd  dvorak_fr.kbd  dvorak_fr_bepo.kbd  dvorak_se_us.kbd  dvorak_tr_F.kbd  dvorak_uk.kbd  (+96 more)
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.am  Makefile.in
data/icons/hicolor/16x16/: Makefile.in
data/icons/hicolor/16x16/apps/: Makefile.am  Makefile.in
data/icons/hicolor/22x22/: Makefile.in
data/icons/hicolor/22x22/apps/: Makefile.am  Makefile.in
data/icons/hicolor/24x24/: Makefile.in
data/icons/hicolor/24x24/apps/: Makefile.am  Makefile.in
data/icons/hicolor/32x32/: Makefile.in
data/icons/hicolor/32x32/apps/: Makefile.am  Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/64x64/: Makefile.in
data/icons/hicolor/64x64/apps/: Makefile.am  Makefile.in
data/icons/hicolor/96x96/: Makefile.in
data/icons/hicolor/96x96/apps/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  klavaro.1
gtkdatabox/: Makefile.am  Makefile.in  gtkdatabox.c  gtkdatabox.h  gtkdatabox_bars.c  gtkdatabox_bars.h  gtkdatabox_cross_simple.c  gtkdatabox_cross_simple.h  gtkdatabox_graph.c  gtkdatabox_graph.h  gtkdatabox_grid.c  gtkdatabox_grid.h  gtkdatabox_lines.c  gtkdatabox_lines.h  gtkdatabox_markers.c  gtkdatabox_markers.h  gtkdatabox_marshal.c  gtkdatabox_marshal.h  gtkdatabox_offset_bars.c  gtkdatabox_offset_bars.h  gtkdatabox_points.c  gtkdatabox_points.h  gtkdatabox_regions.c  gtkdatabox_regions.h  gtkdatabox_ruler.c  gtkdatabox_ruler.h  gtkdatabox_scale.c  gtkdatabox_scale.h  gtkdatabox_typedefs.h  gtkdatabox_xyc_graph.c  gtkdatabox_xyc_graph.h  gtkdatabox_xyyc_graph.c  gtkdatabox_xyyc_graph.h
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  kk.po  klavaro.pot  ky.po  nb.po  nl.po  pa.po  pl.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  te.po  uk.po  ur.po  vi.po  wo.po  (+1 more)
src/: Makefile.am  Makefile.in  accuracy.c  accuracy.h  adaptability.c  adaptability.h  auxiliar.c  auxiliar.h  basic.c  basic.h  callbacks.c  callbacks.h  cursor.c  cursor.h  fluidness.c  fluidness.h  keyboard.c  keyboard.h  main.c  main.h  plot.c  plot.h  top10.c  top10.h  translation.c  translation.h  tutor.c  tutor.h  velocity.c  velocity.h
